<resources>
    <string name="app_name">TerraClimate</string>
    <string name="todo">TODO</string>
    <string name="weather_matters_nwe_ve_got_the_details">Weather Matters,\nWe\'ve Got the Details</string>
    <string name="design_by_n_javed_akhtar">DESIGN BY \n Javed Akhtar</string>
    <string name="humidity">Humidity</string>
    <string name="_70">70</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_3_33">3.33</string>
    <string name="today">Today</string>
    <string name="max_00_00_c">Max - 00:00°C</string>
    <string name="sunday">Sunday</string>
    <string name="_2_10_2024">2/10/2024</string>
    <string name="sunny">SUNNY</string>
    <string name="min_00_00_c">Min - 00:00°C</string>
    <string name="_00_00_c">00:00°C</string>
    <string name="sea">Sea</string>
    <string name="sunset">Sunset</string>
    <string name="_10540">10540</string>
    <string name="sunrise">Sunrise</string>
    <string name="_10054">10054</string>
    <string name="rain">Rain</string>
    <string name="conditions">Conditions</string>
    <string name="_100">100</string>
</resources>