<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_background"
    tools:context=".MainActivity"
    tools:ignore="VisualLintTextFieldSize">

    <SearchView
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/searchviewshape"
        android:iconifiedByDefault="false"
        android:queryHint="Search For A City"
        android:searchIcon="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:drawablePadding="15dp"
        android:textSize="20sp"
        android:text=""
        android:textColor="@color/black"
        android:textAllCaps="true"
        app:drawableLeftCompat="@drawable/location"
        app:layout_constraintEnd_toEndOf="@+id/search"
        app:layout_constraintStart_toStartOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/todayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_00_00_c"
        android:textSize="60sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/todayTxt"
        app:layout_constraintStart_toStartOf="@+id/todayTxt"
        app:layout_constraintTop_toBottomOf="@+id/todayTxt" />

    <TextView
        android:id="@+id/conditionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunny"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_00_00_c"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditionType" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/min_00_00_c"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/maxTemp"
        app:layout_constraintStart_toStartOf="@+id/maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/maxTemp" />

    <TextView
        android:id="@+id/dayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sunday"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTemp" />

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/_2_10_2024"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/dayTxt"
        app:layout_constraintStart_toStartOf="@+id/dayTxt"
        app:layout_constraintTop_toBottomOf="@+id/dayTxt" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backgroundshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/humidityLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/humidityImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/humidity"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:id="@+id/humidityValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_70"
                    android:textAlignment="center"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/humidityTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/windLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/windImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/wind"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/windValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:text="@string/_3_33"
                    android:textAlignment="center"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/windTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/wind_speed"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rainLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/rainImg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/rain" />

                <TextView
                    android:id="@+id/rainValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rain"
                    android:textAlignment="center"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/rainTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conditions"
                    android:textAlignment="center"
                    android:layout_marginBottom="8dp"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sunriseLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sunriseImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/sunrise" />

                <TextView
                    android:id="@+id/sunriseValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_10054"
                    android:textAlignment="center"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/sunriseTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sunrise"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sunsetLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sunsetImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunsetValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_10540"
                    android:textAlignment="center"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/sunsetTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sunset"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/seaLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshape"
                android:contentDescription="@string/todo"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/seaImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/sea" />

                <TextView
                    android:id="@+id/seaValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:textAlignment="center"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/seaTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sea"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextContrastCheck" />
            </LinearLayout>

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="humidityLayout,windLayout,rainLayout,sunriseLayout,sunsetLayout,seaLayout"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/weathersans_medium"
        android:text="@string/design_by_n_javed_akhtar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />





</androidx.constraintlayout.widget.ConstraintLayout>


