<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/cloudImg"
        android:layout_width="211dp"
        android:layout_height="114dp"
        android:layout_marginTop="268dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/white_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/splashTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:fontFamily="@font/weathersans_bold"
        android:text="@string/weather_matters_nwe_ve_got_the_details"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/cloudImg"
        app:layout_constraintStart_toStartOf="@+id/cloudImg"
        app:layout_constraintTop_toBottomOf="@+id/cloudImg" />


    <TextView
        android:id="@+id/designTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/weathersans_medium"
        android:text="@string/design_by_n_javed_akhtar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>